--- a/index.html
+++ b/index.html
@@ -10,9 +10,15 @@
 </head>
 
 <body>
-    <header></header>
+    <header>
+
+    <img id= "hi2"src="img/75610585_992466217766477_7361033986350514176_n.jpg" alt="pic" width="300" height="300">
+      <h2>
+            <img id="hi" src="img/alaa.jpg" alt="pic" width="800" height="200">  
+      </h2> 
+    </header>
     <main>
-            <br> </br>
+        <br> </br>
         <h1>This page to tell you more About Me</h1>
         <br> </br>
         <p>General information about me:</p>
@@ -25,15 +31,17 @@
         </ul>
         <br> </br>
         <p>About My Education:</p>
-        <p>I sudied in TTU as Civil Engineer , Now  i studying now in LTUC because i would like to learn more about programming language .</p>
-        <br> </br> 
+        <p>I sudied in TTU as Civil Engineer , Now i studying now in LTUC because i would like to learn more about
+            programming language .</p>
+        <br> </br>
         <p>My job experience:</p>
-        <p>im fresh graduate , but i worked in the field of engineering projects(specifically in road construction projects) for two months.</p>
+        <p>im fresh graduate , but i worked in the field of engineering projects(specifically in road construction
+            projects) for two months.</p>
 
     </main>
     <footer></footer>
-    
+
     <script src="js\app.js"></script>
-    </body>
+</body>
 
 </html>
