--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <br> </br>
 
         <h2 class="general">
-            General information about me
+            General information about me .....
         </h2>
 
         <br> </br>
@@ -36,7 +36,7 @@
                 <li>Im an Civil Engineer</li>
             </ul>
         </p>
-        <br> </br>
+        <br> 
         <h2 class="education">About My Education</h2>
         <br></br>
         <p class="civil">I sudied in TTU as Civil Engineer , Now i studying now in LTUC because i would like to learn more about
