adding new on html and js by eman

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <h2 class="general">
             General information about me
         </h2>
-
+<h1>Hi alaa im eman here</h1>
         <br> </br>
         <p class="st">
             <ul>
