--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
 <body>
     <header>
 
-        <img class="hi2" src="img/75610585_992466217766477_7361033986350514176_n.jpg" alt="pic" width="300"
-            height="300">
+        <img class="hi2" src="img/75610585_992466217766477_7361033986350514176_n.jpg" alt="pic">
 
-        <img class="hi" src="img/alaa.jpg" alt="pic" width="800" height="200">
+        <img class="hi" src="img/alaa.jpg" alt="pic">
 
     </header>
     <main>
@@ -26,7 +25,6 @@
         <h2 class="general">
             General information about me
         </h2>
-<h1>Hi alaa im eman here</h1>
         <br> </br>
         <p class="st">
             <ul>
@@ -66,7 +64,7 @@
         </p>
         <img class="g" src="https://media.giphy.com/media/py9dtQ1lhj7s4/giphy.gif" alt="gif">
     </main>
-    <footer copyright 2019></footer>
+    <footer>"copyright@2019"</footer>
 
     <script src="js\app.js"></script> 
 </body>
